samples/_failures_safe/1761451871_7fc404_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_729e1c69.c: In function ‘main’:
./samples/SAFE/__tmp_729e1c69.c:173:22: error: expected ‘]’ at end of input
  173 |         input[len - 1
      |                      ^
      |                      ]
./samples/SAFE/__tmp_729e1c69.c:173:9: error: expected declaration or statement at end of input
  173 |         input[len - 1
      |         ^~~~~
./samples/SAFE/__tmp_729e1c69.c:173:9: error: expected declaration or statement at end of input
